--- a/AlgoApp/app/src/main/AndroidManifest.xml
+++ b/AlgoApp/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/MyCustomTheme" >
 
-        <activity android:name=".HomeActivity"
+        <activity android:name=".AlgorithmsListActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,11 +19,6 @@
 
         <activity
             android:name=".AlgorithmDescriptionActivity"
-            android:label="@string/app_name" >
-        </activity>
-
-        <activity
-            android:name=".AlgorithmsListActivity"
             android:label="@string/app_name" >
         </activity>
 
